Fix locale position on mobile

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -390,6 +390,10 @@ footer
         padding 1em 0
         font-size 0.7em
 
+    header 
+        a.navbar-lang-item 
+            text-align center
+
     .landing-block
     .introduction
         .flexrow
